<resources>
    <string name="disclaimer">Disclaimer</string>
    <string name="app_name">OmorniApp</string>
    <string name="facebook_app_id">398936423790968</string>
    <string name="permission">Please first turn on permission</string>
    <string name="confirm_account_no">Confirm Account Number</string>
    <string name="account_no">Account Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_pwd">Create password</string>
    <string name="otp_screen_title">One Time Password \n verification</string>
    <string name="enter_pwd">Please enter your password</string>
    <string name="otp_screen_text">Please enter the code received in \nyour mobile</string>
    <string name="forgot_otp_screen_text">Please enter the code received in \n your email</string>
    <string name="forgot_screen_text">Enter the email address you use to \nsign in. You will receive an email to \nreset your password</string>
    <string name="mobile_screen_text">Please enter your mobile number to verify \nyour account.You will receive an OTP \non this mobile number</string>
    <string name="your_otp">Enter OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_connect">Or connect with</string>
    <string name="dont_account">Don\'t have an account?</string>
    <string name="Sign_up">Sign up</string>
    <string name="enter_email">Enter Email</string>
    <string name="your_email">Your Email</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="apply">Apply</string>
    <string name="clear_all">Clear All</string>
    <string name="send">Send</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="plumber">Plumber</string>
    <string name="electrician">Electrician</string>
    <string name="carpenter">Carpenter</string>
    <string name="ac">AC</string>
    <string name="satellite">Satellite</string>
    <string name="painter">Painter</string>
    <string name="plumber_id">1</string>
    <string name="electrician_id">2</string>
    <string name="carpenter_id">3</string>
    <string name="ac_id">4</string>
    <string name="satellite_id">5</string>
    <string name="painter_id">6</string>
    <string name="select_service">Select Service</string>
    <string name="common">Common</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="notification5">Notifications</string>
    <string name="notification">Notifications</string>
    <string name="calender">Calendar</string>
    <string name="go_on_duty">Go on Duty</string>
    <string name="go_off_duty">Go off Duty</string>
    <string name="favorites">Favorites</string>
    <string name="my_order">My Orders</string>
    <string name="posted_jobs">Posted jobs</string>
    <string name="posted_job_details">Posted job details</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="order">My Orders</string>
    <string name="as_seller">As a seller</string>
    <string name="available_jobs">Available jobs</string>
    <string name="my_quotes">My quotes</string>
    <string name="my_jobs">My jobs</string>
    <string name="provides_dialog_text">you will see this job at view quotes page</string>
    <string name="no_plumber_found">Omorni is sorry  but no Plumber has been found in this area, you will be notified when new sellers will be in your area</string>
    <string name="as_buyer">As a buyer</string>
    <string name="sales">Sales</string>
    <string name="my_skills">My skills</string>
    <string name="provide_quotes">Provide quotes</string>
    <string name="provide_quote">Provide quote</string>
    <string name="cancel_quotes">Cancel quote</string>
    <string name="job_requests">Job requests</string>
    <string name="revenues">Revenues</string>
    <string name="post_jobs">Post Jobs</string>
    <string name="request_title">Request Title</string>
    <string name="job_type">Job Type</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="become_seller">Become a seller</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="no_result">No result found</string>
    <string name="plumbers_in_area">Plumbers in your Area</string>
    <string name="electrician_in_area">Electrician in your Area</string>
    <string name="carpenter_in_area">Carpenter in your Area</string>
    <string name="ac_in_area">AC Technician in your Area</string>
    <string name="satellite_in_area">Satellite Technician in your Area</string>
    <string name="painter_in_area">Painter in your Area</string>
    <string name="plumbering_service">Plumbering service</string>
    <string name="electrician_service">Electrician service</string>
    <string name="carpenter_service">Carpentering service</string>
    <string name="ac_service">Ac repairing service</string>
    <string name="satellite_service">Satellite service</string>
    <string name="painter_service">Painting service</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="accept">Accept</string>
    <string name="not_paid">Not Paid</string>
    <string name="expire">Job expired</string>
    <string name="decline">Decline</string>
    <string name="job_confirm">Your job confrimed succesfully</string>
    <string name="paid">Paid</string>
    <string name="en_route_status">En Route</string>
    <string name="progress">In Progress</string>
    <string name="finished">Finished</string>
    <string name="complete">Completed</string>
    <string name="track">Track</string>
    <string name="rate">Rate</string>
    <string name="meeting_with">Meeting With</string>
    <string name="event">Event</string>
    <string name="request_now">Requested now</string>
    <string name="request_service_now">Request service now</string>
    <string name="scheduled">Scheduled</string>
    <string name="category">Category</string>
    <string name="category_colon">Category : </string>
    <string name="status_colon">Status : </string>
    <string name="order_type_colon">Order type : </string>
    <string name="order_date_colon">Order date : </string>
    <string name="request_summary">Request summary</string>
    <string name="accepting_request">Accepting Request</string>
    <string name="set_schedule_time">Set schedule time</string>
    <string name="select_location">Select service location</string>
    <string name="language">Language</string>
    <string name="languages">Languages</string>
    <string name="description">Description</string>
    <string name="description_here">Description here</string>
    <string name="work_time">Work time</string>
    <string name="work_date">Work Date</string>
    <string name="sar_50">SAR 50 Basic</string>
    <string name="sar_80">SAR 80 Standard</string>
    <string name="sar_120">SAR 120 Premium</string>
    <string name="rating">Rating and reviews</string>
    <string name="now">Now</string>
    <string name="request_service">Request service Now</string>
    <string name="schedule_service">Schedule service</string>
    <string name="schedule_a_service">Schedule a service</string>
    <string name="set_your_location">Set up your service location</string>
    <string name="pick_up_location">Your pick up location</string>
    <string name="date">Date</string>
    <string name="date_colon">Date:</string>
    <string name="done">done</string>
    <string name="done_caps">Done</string>
    <string name="no_more_orders">No more orders to load</string>
    <string name="no_more_notification">No more notifications to load</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal1">Subtotal</string>
    <string name="no_more_jobs">No more jobs to load</string>
    <string name="no_more_quotations">No more quotations to load</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sorry_no_video_attch">Sorry, No video attached with this job</string>
    <string name="sorry_no_audio_attch">Sorry, No audio attached with this job</string>
    <string name="quotes">Quotes</string>
    <string name="name">Name</string>
    <string name="select_bank">Select Bank</string>
    <string name="creditcard">Credit Card</string>
    <string name="card_number">Card Number*</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_expiry_date">Expiry date*</string>
    <string name="card_name">Name</string>
    <string name="month">mm</string>
    <string name="year">yyyy</string>
    <string name="card_verification_code">Card Verification Code</string>
    <string name="card_save">Save for future use</string>
    <string name="paypal">Paypal</string>
    <string name="cashu">Cashu</string>
    <string name="place_order">Place Order</string>
    <string name="service_description">Service description</string>
    <string name="service_date">Service date:</string>
    <string name="rate_buyer">Rate Buyer</string>
    <string name="off_duty">is off duty right now</string>
    <string name="not_free">is not free right now</string>
    <string name="start_time_error">Service start time must be greater than current time</string>
    <string name="end_time_error">Service end time must be greater than start time</string>
    <string name="standard_price_error">Please select standard price</string>
    <string name="premium_price_error">Please select premium price</string>
    <string name="standard_greater_basic">Standard price must be greater than basic price</string>
    <string name="premium_greater_standard">Premium price must be greater than standard price</string>
    <string name="description_character">Description can not contain characters like </string>
    <string name="id_no">ID#</string>
    <string name="add_pic_error">Please add your picture</string>
    <string name="skills_updated">Skills updated succesfully</string>
    <string name="id_error">Please enter your id</string>
    <string name="id_scan_error">Please add id scan picture</string>
    <string name="standard_package_description">Please enter standard package description</string>
    <string name="seller_rejected_job">Seller rejected your job. So check for another seller</string>
    <string name="basic_price_error">Please select basic price</string>
    <string name="additional_basic_package">Please enter additional price for basic package</string>
    <string name="additional_premium_package">Please enter additional price for premium package</string>
    <string name="additional_standard_package">Please enter additional price for standard package</string>
    <string name="premium_package_descr">Please enter premium package description</string>
    <string name="basic_package_descri_error">Please enter basic package description</string>
    <string name="spare_part">Spare part included</string>
    <string name="update_services">Update my services</string>
    <string name="dialog_text">OTP Code will be sent\non your registered\nmobile number</string>
    <string name="resend_code">Resend OTP Code</string>
    <string name="otp_code">OTP Code</string>
    <string name="please_enter_otp">Please enter otp number</string>
    <string name="my_transactions">My Transactions</string>
</resources>